2008-01-14  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotPrefixValuesWithEnumNameRule.cs: New. Rule that checks enums
	to see if it prefix it's values with the it's own name [Andreas 
	Noever]
	* DoNotUseReservedInEnumValueNamesRule.cs: New. Rule that check 
	enums to see if it has values containing the word "reserved" 
	[Andreas Noever]
	* ParameterNamesShouldMatchOverridenMethodRule.cs: New. Rule that
	check if overriden (or interface implementation) methods use the same
	parameter names as the original. [Andreas Noever]
	* Gendarme.Rules.Naming.mdp: Updated MonoDevelop project file.
	* Gendarme.Rules.Naming.xml.in: Updated descriptions.
	* Makefile.am: Updated Makefile for new rules/tests.

2008-01-11  Sebastien Pouliot  <sebastien@ximian.com>

	* DetectNonAlphaNumericsInTypeNamesRule.cs: Turn a method to static 
	and use new Location ctors.
	* EnumNotEndsWithEnumOrFlagsSuffixRule.cs: Use new Location ctors.
	* UseCorrectCasingRule.cs: Use new Location ctors.
	* UseCorrectPrefixRule.cs: Use new Location ctors.
	* UseCorrectSuffixRule.cs: Use new Location ctors.
	* UsePreferredTermsRule.cs: Use new Location ctors.

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* EnumNotEndsWithEnumOrFlagsSuffixRule.cs: Use rocks to reduce code
	duplication.
	* UsePluralNameInEnumFlagsRule.cs: Use rocks to reduce code	
	duplication.
	* UseSingularNameInEnumsUnlessAreFlagsRule.cs: Use rocks to reduce 
	code duplication.
	* Makefile.am: Add linq to compiler options

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* AttributeEndsWithAttributeSuffixRule.cs: Deleted. The new rule
	UseCorrectSuffixTest is a superset of this rule.
	* Gendarme.Rules.Naming.mdp: Updated MonoDevelop project file.
	* Gendarme.Rules.Naming.xml.in: Updated descriptions.
	* Makefile.am: Updated Makefile for new rules/tests.
	* NamingUtils.cs: New. Common methods for naming rules.
	* UseCorrectCasingRule.cs: New. Rule to check correct casing. 
	From Daniel Abramov (GHOP).