@@ -1,3 +1,8 @@
+2008-01-18  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ParameterNamesShouldMatchOverridenMethodRule.cs: Change three
+	methods to static (for better self-test results :)
+
 2008-01-14  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* DoNotPrefixValuesWithEnumNameRule.cs: New. Rule that checks enums
